HVAC Backup 2/objects/Part_Scope__c(1).object
<CustomObject>
    <fields>
        <fullName>CP_Sub_Type__c</fullName>
        <formula>IF(
TEXT(Sub_Type__c) = &quot;BA&quot;,
&quot;BA&quot;,
IF(
TEXT(Sub_Type__c) = &quot;DLR&quot;,
&quot;SSD&quot;,
IF(
TEXT(Sub_Type__c) = &quot;ESA&quot;,
&quot;ESA&quot;,
IF(
TEXT(Sub_Type__c) = &quot;BSL&quot;,
&quot;Bluestar&quot;,
&quot;&quot;
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_group__c</fullName>
        <label>Material group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Material_group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Obligation__c</fullName>
        <label>Obligation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Obligation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policy</label>
        <referenceTo>WarrantyTerm</referenceTo>
        <relationshipLabel>Part Scopes</relationshipLabel>
        <relationshipName>Part_Scopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scope</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sub_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_No_Backend_DU__c</fullName>
        <externalId>true</externalId>
        <label>Unique No Backend DU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Part Scope</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Part Scope</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Scopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>